--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- This is the cdn for ck editor -->
+    <script src="//cdn.ckeditor.com/4.11.1/full/ckeditor.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,20 +37,36 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Editor App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="editor" class="container col-7"></div>
+    <div class="row d-flex justify-content-around p-5">
+      <div class="col-4 bg-info p-5">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem,
+        veniam a. Perspiciatis deleniti error cupiditate dolores sapiente quod
+        praesentium eligendi exercitationem, earum nam sit ut, a numquam
+        accusamus corrupti hic.
+      </div>
+      <div class="col-4 bg-secondary p-5"></div>
+    </div>
+    <div class="container bg-warning">
+      <label for="text">Type Here</label>
+      <textarea
+        class="col-4 w-100 h-100"
+        placeholder="Click Here"
+        id="short_desc"
+        name="short_desc"
+        style="border: 1px solid black"
+      >
+      </textarea
+      ><br />
+    </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script type="text/javascript">
+      CKEDITOR.inline("short_desc");
+    </script>
   </body>
 </html>
